--- a/css/blog.css
+++ b/css/blog.css
@@ -1,24 +1,30 @@
 /* start global rules */
-*{
-      box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      -webkit-box-sizing: border-box;  
+* {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
-body{
-        font-family: 'Open Sans', sans-serif;
+body {
+  font-family: "Open Sans", sans-serif;
 }
-html{
-        scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
 /* start container */
 
- 
-.container{
-        padding-left: 15px;
-        padding-right: 15px;
-        margin-left: auto;
-        margin-right: auto;
-        /* background-color: #ccc; */
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  /* background-color: #ccc; */
+}
+.containerR {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  /* background-color: #ccc; */
 }
 a {
   text-decoration: none;
@@ -34,39 +40,606 @@ ul {
 
 /* small screens */
 @media (min-width: 768px) {
-        .container{
-                width: 750px;
-        }
+  .container {
+    width: 750px;
+  }
 }
 
 /* medium screens */
-@media(min-width:992px){
-        .container{
-                width: 970px;
-        }
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
 }
 
 /* large screens */
-@media(min-width:1200px){
-        .container{
-                width: 1170px;
-        }
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
 }
- 
+
 /* end responsive  */
 
 /* end global rules */
-/* start header   */
-  /* end header   */
 
- /* start landing  */
- /* end landing  */
-        
-  /* start about  */
- /* end about  */
- 
- /* start menu  */
- /* end menu  */
- 
- /* start footer  */
- /* end footer  */
+/* start component */
+.heading {
+  text-align: center;
+}
+.heading h3 {
+  text-transform: uppercase;
+  font-size: 25px;
+  padding-top: 20px;
+}
+.heading p {
+  font-size: 20px;
+   padding-bottom: 20px;
+}
+.heading p span {
+  color: rgb(97, 93, 93);
+}
+
+/* ====================== */
+.image {
+  display: flex;
+  margin-right :25px;
+}
+.image img {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin-right: -15px;
+  margin-left: -5px;
+  /* margin:  0 100px; */
+}
+@media(max-width:767px){
+  .image img{
+    width: 100%;
+    height: fit-content;
+    margin-left: 15px;
+  }
+}
+/* ====================== */
+.container {
+  max-width: 1000px;
+  /* max-height: 400px; */
+}
+.text {
+  margin-top: 50px;
+  font-size: 20px;
+  /* margin-bottom: 150px; */
+}
+.text p span {
+  font-weight: bold;
+}
+
+/* ====================== */
+.bottoms {
+  margin-top: 50px;
+  padding-bottom: 50px;
+}
+.bottoms .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.bottoms .container .lbottom a {
+  color: black;
+  border: 1px solid rgb(170, 167, 167);
+  padding: 5px 20px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+  font-size: 20px;
+}
+.bottoms .container .lbottom a i {
+  padding-right: 5px;
+}
+.bottoms .container .lbottom a:hover {
+  background-color: #aaa;
+}
+.bottoms .container .rbottom a {
+  color: #fff;
+  border: 1px solid rgb(170, 167, 167);
+  padding: 5px 20px;
+  background-color: #000;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+    font-size: 20px;
+}
+.bottoms .container .rbottom a span {
+  margin-left: 5px;
+  width: 5px;
+  height: 5px;
+  padding: 0 10px;
+  background-color: #fff;
+  color: #000;
+}
+.bottoms .container .rbottom a:hover {
+  background-color: #aaa;
+}
+/* end   component */
+
+/* start header   */
+.header {
+  background-color: black;
+}
+.header .links >a{
+  color: #fff;
+  margin-left: 20px;
+}
+@media(min-width:768px){
+  .header .links >a{
+    display: none;
+  }
+}
+
+.header .links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header .links .left {
+     display: flex;
+     justify-content: space-between;
+  
+}
+@media(max-width:767px){
+  .header .links .left{
+    display: none;
+
+  }
+   .header .links .toggle:hover + .left {
+   display: flex;
+   flex-direction: column;
+   position: absolute;
+   top:60px;
+   margin-left: 40px;
+  padding-left: 5px;
+   padding-bottom: 5px;
+   width: 40%;
+   background-color: rgba(26, 25, 25, 0.8);
+   z-index: 15;
+   
+}
+
+  .header .links .toggle:hover + .left a{
+   margin-left: -20px;
+  }
+
+ .header .links  .left a:not(:last-of-type){
+    border-bottom: 1px solid rgba(185, 195, 199, 0.8);
+  }
+
+
+}
+
+.header .links .left a {
+  padding: 10px;
+}
+.header .links .left a i {
+  color: #fff;
+  font-size: 15px;
+  width: 30px;
+  position: relative;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  left: 25%;
+}
+.header .links .left a:hover {
+  background-color: #ddd;
+}
+
+.header .links .right a {
+  color: #fff;
+
+}
+.header .links .right a i {
+        padding: 15px;
+        font-size: 20px;
+  color: #fff;
+}
+
+.header .links .right a i:hover {
+  background-color: #ddd;
+}
+/* end header   */
+.about{
+        display: flex;
+        justify-content: space-between;
+        background-color: rgb(230, 230, 230);
+
+}
+@media(max-width:767px){
+  .about{
+    flex-direction: column;
+  }
+}
+/* start title  */
+.title {
+  text-align: center;
+  padding-top: 50px;
+  margin-bottom: 80px;
+}
+.title h2 {
+  font-size: 50px;
+  /* font-weight: normal; */
+}
+@media(max-width:767px){
+  .title h2{
+    font-size: 30px;
+    margin-bottom: 50px;
+  }
+}
+.title p {
+  font-size: 15px;
+  margin-top: -20px;
+  font-weight: bold;
+}
+.title p span {
+  background-color: #000;
+  color: #fff;
+  margin-left: 5px;
+  padding: 5px;
+}
+/* end title  */
+
+/* start landing  */
+.landing {
+  background-image: url(../images/landing.jpg);
+  background-size: cover;
+  height: 100vh;
+  position: relative;
+}
+@media(max-width:767px){
+  .landing .text h2{
+    font-size: 20px;
+  }
+  .landing{
+    background-size: cover;
+    height: 300px;
+  }
+}
+.landing .text {
+  position: absolute;
+  top: 50%;
+  margin-top: -50px;
+  margin-left: 30px;
+}
+.landing .text p {
+  color: #fff;
+  font-size: 30px;
+  margin-bottom: -50px;
+  margin-top: 50px;
+}
+.landing .text h2 {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 70px;
+  margin-bottom: 20px;
+}
+@media(max-width:767px){
+  .landing .text h2{
+    font-size: 30px;
+    margin-top: 50px;
+  }
+  .landing .text p{
+    font-size: 20px;
+  }
+}
+.landing .text a {
+  color: #000;
+ background-color:rgba(185, 195, 199, 0.6) ;
+  padding: 10px;
+  font-size: 20px;
+  text-transform: uppercase;
+  margin-top: -15px;
+}
+@media(max-width:767px){
+  .landing .text a {
+    font-size: 15px;
+  }
+}
+.landing .text a:hover{
+        background-color:rgba(185, 195, 199, 0.8) ;
+}
+/* end landing  */
+.left-cards{
+        width: 75%;
+        margin-right: 25px;
+     margin-right: 10px;   
+     margin-left: 10px;
+}
+.right-cards{
+        margin-top: 120px;
+     margin-right: 10px;
+}
+.card{
+        background-color: #fff;
+        margin-bottom: 50px;
+}
+@media(max-width:767px){
+  .left-cards{
+    width: 340px;
+    
+  }
+}
+/* start me  */
+
+.me {
+        background-color: #000;
+        width: 100%;
+        margin-top: -90px;
+}
+@media(max-width:767px){
+  .me{
+    margin-left: 5px;
+  }
+}
+.me img {
+        width: 100%;
+        height: 100%;
+}
+.me .text {
+          margin-left: 10px;
+          margin-right: 5px;
+}
+.me .text h3 {
+  color: #fff;
+  font-size: 20px;
+}
+.me p {
+  color: #fff;
+  padding-bottom: 10px;
+}
+/* end me  */
+
+/* start  posts*/
+.posts {
+        /* border: 1px solid #666; */
+        background-color: #fff;
+}
+@media(max-width:767px){
+  .posts{
+    margin-left: 5px;
+  }
+}
+.posts .post-conts{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+}
+.posts .post-conts > h3{
+        background-color: #000;
+        color: #fff;
+        padding: 10px 0 10px  10px;
+        font-weight: normal;
+        font-size: 30px;
+        margin-bottom: 0%;
+        margin-top: 0;
+}
+.posts .post-conts .post-cont{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        margin-bottom: 5px;
+}
+.posts .post-conts .post-cont:not(:last-of-type){
+        border-bottom: 1px solid rgb(204, 201, 201);
+}
+.posts .post-conts .post-cont:hover{
+        background-color: rgb(162, 164, 165);
+}
+.posts .post-conts .post-cont .img img{
+        width: 60px;
+        margin-left: 5px;
+        margin-top: 5px;
+}
+.posts .post-conts .post-cont .post-text{
+        padding-top: 5px;
+        width: 80px;
+        margin-left: 10px;
+        flex: 1;
+        margin-top: -25px;
+        font-weight: normal;
+}
+.posts .post-conts .post-cont .post-text h3{
+        font-size: 20px;
+        margin-top: 25px;
+        margin-bottom: -15px;
+}
+.posts .post-conts .post-cont .post-text p{
+        font-size: 15px;
+}
+
+/* satrt Advertise */
+.right-cards .Advertise {
+       border: 1px solid rgb(226, 226, 226);
+       margin-top: 10px;
+       background-color: #fff;
+}
+@media(max-width:767px){
+  .Advertise{
+    margin-left: 5px;
+  }
+}
+.right-cards .Advertise  .adv-head{
+        background-color: #000;
+        color: #fff;
+        margin-top: -25px;
+}
+.right-cards .Advertise  .adv-head p{
+        padding: 10px;
+}
+.right-cards .Advertise .advs-cont{
+        padding: 15px;
+        margin-top: -26px;
+        position: relative;
+        display: flex;
+        justify-content: center;
+
+} 
+.right-cards .Advertise .advs-cont > div{
+  background-color: rgb(169, 169, 169);
+        width: 100%;
+        height:300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
+.right-cards .Advertise .advs-cont p{
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 125px;
+        /* top: 30%;
+        left: 20%; */
+        font-size: 20px;
+}
+/* end Advertise */
+
+/* end posts*/
+
+/* start tags  */
+.tags{
+        background-color: #fff;
+        margin-top: 20px;
+}
+@media(max-width:767px){
+  .tags{
+    margin-left: 5px;
+  }
+}
+ .tag-head h3{
+        background-color: #000;
+        color: #fff;
+        padding: 10px 0 10px  10px;
+        font-weight: normal;
+        font-size: 30px;
+        margin-bottom: 0%;
+        margin-top: 0;
+        font-size: 20px;
+}
+.tags .tag-cont{
+        margin-top: 20px;
+        display: flex;
+        flex-wrap:wrap ;
+        padding: 5px;
+}
+.tags .tag-cont p{
+        background-color: rgb(242, 234, 234);
+        color: #fff;
+        margin-bottom: 5px;
+        font-size: 15px;
+        margin-right: 15px;
+        padding: 5px;
+        color: #000;
+}
+.tags .tag-cont p.active{
+        background-color: #000;
+        color: #fff;
+}
+/* end tags  */
+
+/* start inspir  */
+.inspir{
+        margin-top: 20px;
+        background-color: #fff;
+}
+@media(max-width:767px){
+  .inspir{
+    margin-left: 5px;
+  }
+}
+.inspir .inspir-cont{
+        padding: 15px;
+        display: grid;
+        grid-template-columns: repeat(auto-fill , minmax(100px , 1fr));
+        gap: 20px;
+        margin-top: 20px;
+}
+.inspir .inspir-cont img{
+        width: 100%;
+}
+.follow{
+        margin-top: 20px;
+        background-color: #fff;
+}
+@media(max-width:767px){
+  .follow{
+    margin-left: 5px;
+  }
+}
+.follow .follow-cont{
+        height: 50px;
+        display: flex;
+        align-items: center;
+        margin-left: 10px;
+}
+.follow .follow-cont a{
+        margin-left: 5px;
+        color: #000;
+
+}
+
+.sub{
+        margin-top: 20px;
+        background-color: #fff;
+}
+@media(max-width:767px){
+  .sub{
+    margin-left: 5px;
+  }
+}
+.sub .sub-cont{
+        font-size: 15px;
+        padding: 5px;
+}
+
+.sub .sub-cont form{
+        display: flex;
+        flex-direction: column;
+}
+.sub .sub-cont form input:first-of-type{
+        margin-bottom: 15px;
+} 
+.sub .sub-cont form input:last-of-type{
+        color: #fff;
+        background-color: rgb(242, 79, 79);
+        border: none;
+        padding: 5px;
+}
+/* end inspir  */
+
+.foot{
+        background-color: rgba(0, 0, 0, .6);
+        height: 150px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+}
+.foot a{
+        color: #fff;
+        background-color: #000;
+        padding: 15px;
+        font-size: 20px;
+        margin-top: 30px;
+        margin-left: 20px;
+}
+@media(max-width:767px){
+  .foot a{
+    font-size: 15px;
+  }
+}
